--- a/app/src/main/res/layout/restaurant_list_item.xml
+++ b/app/src/main/res/layout/restaurant_list_item.xml
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:textColor="@android:color/white"
+            android:textAlignment="textEnd"
             android:maxEms="20"
             tools:text="Indian, Chinese, Japanese, European"
             tools:textColor="@color/colorPrimary"/>
@@ -65,6 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:textAlignment="textEnd"
             android:textColor="@android:color/white"
             android:maxEms="18"
             tools:text="Restaurant Address"
@@ -114,6 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:textColor="@android:color/white"
+            android:maxEms="18"
             tools:text="Mon-Fri: 12:00 - 23:00\nSat-Sun: 14:00 - 22:00"
             tools:textColor="@color/colorPrimary"/>
 
