--- a/app/src/main/res/layout/restaurant_list_item.xml
+++ b/app/src/main/res/layout/restaurant_list_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical"
     android:padding="@dimen/padding_m"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".CategoryActivity"
-    android:descendantFocusability="blocksDescendants">
+    tools:context=".CategoryActivity">
 
     <TextView
         android:id="@+id/restaurant_name"
@@ -15,14 +15,14 @@
         android:textColor="@android:color/white"
         android:textSize="@dimen/text_font_size_l"
         tools:text="Restaurant Name"
-        tools:textColor="@color/colorPrimary"/>
+        tools:textColor="@color/colorPrimary" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginBottom="@dimen/margin_s"
         android:background="@android:color/white"
-        tools:background="@color/colorPrimary"/>
+        tools:background="@color/colorPrimary" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -32,20 +32,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:textColor="@android:color/white"
             android:text="@string/type"
-            tools:textColor="@color/colorPrimary"/>
+            android:textColor="@android:color/white"
+            tools:textColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/restaurant_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:textColor="@android:color/white"
-            android:textAlignment="textEnd"
             android:maxEms="20"
+            android:textAlignment="textEnd"
+            android:textColor="@android:color/white"
             tools:text="Indian, Chinese, Japanese, European"
-            tools:textColor="@color/colorPrimary"/>
+            tools:textColor="@color/colorPrimary" />
 
     </RelativeLayout>
 
@@ -57,20 +57,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:textColor="@android:color/white"
             android:text="@string/address"
-            tools:textColor="@color/colorPrimary"/>
+            android:textColor="@android:color/white"
+            tools:textColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/restaurant_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:maxEms="18"
             android:textAlignment="textEnd"
             android:textColor="@android:color/white"
-            android:maxEms="18"
             tools:text="Restaurant Address"
-            tools:textColor="@color/colorPrimary"/>
+            tools:textColor="@color/colorPrimary" />
 
     </RelativeLayout>
 
@@ -82,19 +82,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:textColor="@android:color/white"
             android:text="@string/phone"
-            tools:textColor="@color/colorPrimary"/>
+            android:textColor="@android:color/white"
+            tools:textColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/restaurant_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:textColor="@android:color/white"
             android:autoLink="phone"
+            android:textColor="@android:color/white"
             tools:text="+40753033123"
-            tools:textColor="@color/colorPrimary"/>
+            tools:textColor="@color/colorPrimary" />
 
     </RelativeLayout>
 
@@ -106,22 +106,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:textColor="@android:color/white"
             android:text="@string/program"
-            tools:textColor="@color/colorPrimary"/>
+            android:textColor="@android:color/white"
+            tools:textColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/restaurant_program"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:textColor="@android:color/white"
             android:maxEms="18"
+            android:textColor="@android:color/white"
             tools:text="Mon-Fri: 12:00 - 23:00\nSat-Sun: 14:00 - 22:00"
-            tools:textColor="@color/colorPrimary"/>
+            tools:textColor="@color/colorPrimary" />
 
     </RelativeLayout>
-
 
 
 </LinearLayout>
