--- a/app/src/main/res/layout/park_list_item.xml
+++ b/app/src/main/res/layout/park_list_item.xml
@@ -150,7 +150,7 @@
         android:layout_below="@id/park_image"
         android:autoLink="phone"
         android:text="@string/park_details"
-        android:textAlignment="center"
+        android:textAlignment="textEnd"
         android:textColor="@android:color/white"
         tools:textColor="@color/colorPrimary" />
 
