Code inspect & cleanup

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/cluj_overview" />
+            app:srcCompat="@drawable/cluj_overview"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:layout_width="wrap_content"
