--- a/app/src/main/res/values/strings_museums.xml
+++ b/app/src/main/res/values/strings_museums.xml
@@ -52,7 +52,7 @@
         <item>info.muzeu@macluj.ro</item>
         <item>mirliviu@yahoo.com</item>
         <item>ghita_capusan@gmail.com</item>
-        <item></item>
+        <item />
     </string-array>
 
 </resources>
