--- a/app/src/main/res/values/strings_restaurants.xml
+++ b/app/src/main/res/values/strings_restaurants.xml
@@ -15,7 +15,7 @@
     </string-array>
 
     <string-array name="restaurant_addresses">
-        <item>10-12 Piezisa Street</item>
+        <item>10–12 Piezisa Street</item>
         <item>8 Universitatii Street</item>
         <item>5 Gh Marinescu Street</item>
         <item>5 Stephan Ludwig Roth Street</item>
