--- a/app/src/main/res/values/strings_parks.xml
+++ b/app/src/main/res/values/strings_parks.xml
@@ -28,18 +28,18 @@
     <string-array name="park_phones">
         <item>+40720425741</item>
         <item>+40264592152</item>
-        <item></item>
+        <item />
     </string-array>
 
     <string-array name="park_webs">
-        <item>http://www.primariaclujnapoca.ro/</item>
-        <item></item>
-        <item></item>
+        <item>http://www.primariaclujnapoca.ro</item>
+        <item />
+        <item />
     </string-array>
 
     <string-array name="park_emails">
-        <item></item>
+        <item />
         <item>gradina.botanica@ubbcluj.ro</item>
-        <item></item>
+        <item />
     </string-array>
 </resources>
