--- a/app/src/main/res/values/strings_tours.xml
+++ b/app/src/main/res/values/strings_tours.xml
@@ -5,16 +5,16 @@
         <item>9:00 AM</item>
         <item>9:00 AM</item>
         <item>10:00 AM</item>
-        <item></item>
-        <item></item>
+        <item />
+        <item />
     </string-array>
 
     <string-array name="tour_departure_points">
         <item>We will pick you up from your hotel, or from your requested location</item>
         <item>Cluj-Napoca</item>
         <item>Your centrally located hotel</item>
-        <item></item>
-        <item></item>
+        <item />
+        <item />
     </string-array>
 
     <string-array name="tour_descriptions">
@@ -22,7 +22,7 @@
         <item>Discover a land of unspoiled forests, warm hospitality, and ancient family traditions on an overnight tour of Maramures, a region where old Romanian ways of life still thrive. Combine the best of northern Romania’s nature and culture as you visit distinctive hand-carved wooden churches and old cemeteries, pass through pristine woodlands where brown bears roam, and join in local craft and social customs. Try regional cuisine with several included meals, and spend the night in a typical inn for an authentic, immersive experience.</item>
         <item>Discover step by step the secrets of Cluj-Napoca, proclaimed city of arts and the European Capital of Youth.</item>
         <item>Servus, and welcome to “Active Weekends”, the starting point for your hiking tours on Transylvanian trails!</item>
-        <item></item>
+        <item />
     </string-array>
 
     <string-array name="tour_short_names">
@@ -45,7 +45,7 @@
         <item>Turda Salt Mine</item>
         <item>Maramures</item>
         <item>Cluj-Napoca</item>
-        <item></item>
+        <item />
         <item>Cluj-Napoca</item>
     </string-array>
 
@@ -54,7 +54,7 @@
         <item>+40317800236</item>
         <item>+40317800236</item>
         <item>+40747510825</item>
-        <item></item>
+        <item />
     </string-array>
 
     <string-array name="tour_webs">
@@ -62,15 +62,15 @@
         <item>https://rolandia.eu/</item>
         <item>https://rolandia.eu/</item>
         <item>http://activeweekends.ro/</item>
-        <item></item>
+        <item />
     </string-array>
 
     <string-array name="tour_emails">
-        <item></item>
-        <item></item>
-        <item></item>
+        <item />
+        <item />
+        <item />
         <item>contact@activeweekends.ro</item>
-        <item></item>
+        <item />
     </string-array>
 
     <string-array name="tour_highlights_1">
